# functional-flow

./: LICENSE  README.md  pyproject.toml
src/functional_flow/: __init__.py
